줄바꿈이 발생하는 텍스트 태그

--- a/002_text_tag_for_block.html
+++ b/002_text_tag_for_block.html
@@ -5,15 +5,35 @@
         <title>블럭용 텍스트 태그</title>
     </head>
     <body>
-        <h1>블럭용 텍스트 태그</h1>
-        <h2>텍스트를 블럭 단위로 묶음</h2>
+    <!--
+    [줄바꿈이 발생하는 텍스트 태그]
+
+    h1~h6: 제목
+    p: 텍스트 단락
+    blockquote: 인용문
+    hr: 주제 전환
+    pre: 입력한 모양 유지
+    br: 강제 줄바꿈
+
+    태그는 의미에 맞게 사용해야 한다.
+    p 태그 안의 텍스트를 굵고 크게 만들면 h1 태그 처럼 보이게 할 수는 있지만 그렇게 해서는 안된다.
+    -->
+
+        <h1>행복이란 무엇인가</h1>
+        <h2>세계 3대 명강의 - 예일대의 '죽음' 하버드대의 '행복''정의'</h2>
+        <p>2006년 하버드 대학에서는 무명의 교수가 이끄는 강의가 선풍적으로 인기를 끌었다.<br>그 인기는 오랫동안 부동의 1위를 차지했던 경제학도 제칠 정도였고 학생들의 가족들까지 강의실로 불러들이며 경청하게 만들었다.</p>
+        <hr>
+        <h2>저자 소개</h2>
+        <p>저자: 탈 벤 샤하르</p>
+        <hr>
+        <blockquote>행복이란 무엇인가? 행복이란 주관적인 감정의 경험이다.</blockquote>
+        <hr>
         <pre>
-        블럭용 텍스트 태그에는
-        h1~h6(제목), p(텍스트 단락), blockquote(인용문), hr(주제 전환), pre(입력한 그대로), br(강제 줄바꿈) 있다.
-        </pre>
-        <hr>
-        <p>태그는 의미에 맞게끔 사용해야 한다.<br>p 태그 안의 텍스트를 굵고 크게 만들면 h1 태그와 같은 모양을 만들수는 있지만, 그렇다고 제목 태그로 사용해서는 안된다.</p>
-        <hr>
-        <blockquote>간단하게 설명할 수 없으면 제대로 이해하지 못한 것이다. - 알버트 아인슈타인 -</blockquote>
+목차
+
+1부. 행복을 연구하는 학문 긍정 심리학
+2부. 긍정적인 삶의 다섯 가지 관점
+3부. 행복을 위한 다섯 가지 지침서
+    </pre>
     </body>
 </html>
