--- a/002_text_tag_for_block.html
+++ b/002_text_tag_for_block.html
@@ -2,7 +2,7 @@
 <html lang="ko">
     <head>
         <meta charset="utf-8">
-        <title>블럭용 텍스트 태그</title>
+        <title>블록레벨 텍스트 태그</title>
     </head>
     <body>
     <!--
