--- a/006_table.html
+++ b/006_table.html
@@ -12,6 +12,9 @@
             -> aria-describedby: 표 설명
 
             caption: 테이블 타이틀
+            colgroup
+                col:열의 개수 만큼 지정, 닫는 태그 없음
+                    -> span: 2개 이상의 열 묶기
             tr: 행
 
                 td: 셀(한 칸)
@@ -21,6 +24,25 @@
                 th: 셀(제목 한 칸)
                     -> colspan: 열 합치기
                     -> rowspan: 행 합치기
+
+        ---------------------------------
+
+        [테이블 구조]
+
+        table
+            caption
+            colgroup
+                col
+            thead: 표의 제목 부분
+                tr
+                    th,td
+            tbody: 표의 본문 부분
+                tr
+                    th,td
+            tfoot: 표의 요약 부분
+                tr
+                    th,td
+
         -->
 
         <h2>[테이블 기본 구조]</h2>
@@ -151,6 +173,88 @@
                 <th>엣지</th>
                 <td>Microsoft</td>
                 <td>https://www.microsoft.com/ko-kr/windows/microsoft-edge</td>
+            </tr>
+        </table>
+        <hr>
+        <h2>[표 구조 정의]</h2>
+        <table border="1">
+            <caption>제주특별자치도 학교현황(2015.4.1 기준)</caption>
+            <thead>
+                <tr>
+                    <th>구분</th>
+                    <th>학교수</th>
+                    <th>학급수</th>
+                    <th>학생수</th>
+                    <th>교원수</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>유치원</th>
+                    <td>117</td>
+                    <td>252</td>
+                    <td>5,547</td>
+                    <td>474</td>
+                </tr>
+                <tr>
+                    <th>초등학교</th>
+                    <td>111</td>
+                    <td>1,720</td>
+                    <td>37,686</td>
+                    <td>2,632</td>
+                </tr>
+                <tr>
+                    <th>중학교</th>
+                    <td>44</td>
+                    <td>699</td>
+                    <td>21,274</td>
+                    <td>1,412</td>
+                </tr>
+                <tr>
+                    <th>고등학교</th>
+                    <td>29</td>
+                    <td>676</td>
+                    <td>22,019</td>
+                    <td>1,433</td>
+                </tr>
+                <tr>
+                    <th>특수학교</th>
+                    <td>3</td>
+                    <td>90</td>
+                    <td>428</td>
+                    <td>160</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <th>합계</th>
+                    <td>300</td>
+                    <td>3,437</td>
+                    <td>86,954</td>
+                    <td>6,111</td>
+                </tr>
+            </tfoot>
+        </table>
+        <hr>
+        <h2>[열(column) 묶기]</h2>
+        <table border="1">
+            <caption>colgroup 연습</caption>
+            <colgroup>
+                <col>
+                <col span="2" style="background-color:blue;">
+                <col style="background-color:yellow;">
+            </colgroup>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
         </table>
     </body>
