폼 태그 기본구조

--- a/010_form_basic_structure.html
+++ b/010_form_basic_structure.html
@@ -19,7 +19,7 @@
                 legend: 그룹의 이름
 
             label: 폼 요소에 텍스트를 붙임
-                for: 연결될 폼 요소의 id값
+                -> for: 연결될 폼 요소의 id값
 
         label를 사용하면, 텍스트까지 클릭 영역이 확장됨
         -->
