--- a/015_button.html
+++ b/015_button.html
@@ -21,7 +21,7 @@
                 <img src="images/tick.png" alt="">전송하기
             </button>
             <button type="reset">다시쓰기</button>
-            <button type="button">주소입력</button>
+            <button type="button">버튼</button>
         </form>
     </body>
 </html>
