--- a/015_button.html
+++ b/015_button.html
@@ -9,7 +9,7 @@
         [버튼]
 
         button
-            -> submit, reset, button
+            -> type: submit, reset, button
 
         <input type="submit|reset|button">과 기능적으로 같으나
         버튼을 만들때는 앞으로 button 태그 사용할 것
